painting update
